# old_hopeless

chatd/: CMakeLists.txt  admin_chatd.cpp  admin_chatd.h  answer.cpp  answer.h  audio_tags.cpp  audio_tags.h  avatar.cpp  avatar.h  chatd.cfg  chatd.cpp  chatd.doc  chatd_etc  configure.h  context.cpp  context.h  domain.cpp  domain.h  domains.list  dumper.cpp  dumper.h  error.cpp  error.h  friendsoft.ru  front.cpp  front.h  install.sh  link.cpp  link.h  processor.cpp  processor.h  schedule.txt  service.cpp  service.h  service_messages.cpp  service_messages.h  smile.cpp  smile.h  smiles.list  stat_daemon.cpp  (+4 more)
chatd/blizzard/: blizzard.cpp  blizzard.h  object.cpp  object.h  table.cpp  table.h
chatd/commands/: authentication_request.cpp  authentication_request.h  change_nickname_request.cpp  change_nickname_request.h  cmessage.cpp  cmessage.h  come_in.cpp  come_in.h  commands.h  logout.cpp  logout.h  remove_login.cpp  remove_login.h  result.cpp  result.h
chatd/objects/: archive.cpp  archive.h  audio.cpp  audio.h  image.cpp  image.h  invite.cpp  invite.h  message.cpp  message.h  room.cpp  room.h  room_message.cpp  room_message.h  room_user.cpp  room_user.h  session.cpp  session.h  user.cpp  user.h  video.cpp  video.h  writer.cpp  writer.h
execd/: Jamroot  configure.h  execd  execd.cfg  execd.cpp  front.cpp  front.h  install.sh  service.cpp  service.h  stat_daemon.cpp  stat_daemon.h
include/: admin.cpp  admin.h  config.cpp  config.h  config_base.cpp  config_base.h  crypto.cpp  crypto.h  define_list.h  format.cpp  format.h  get_html.cpp  get_html.h  http_proto.cpp  http_proto.h  http_server.cpp  http_server.h  log.cpp  log.h  processmanager.cpp  processmanager.h  request.cpp  request.h  response.cpp  response.h  serialization.cpp  serialization.h  server.h  shared_mutex.cpp  shared_mutex.h  singleton.h  socket.cpp  socket.h  stat_base.cpp  stat_base.h  stream.cpp  stream.h  telnet.cpp  telnet.h  types.cpp  (+5 more)
